tests/NormalTests/paczka1/fuzzy1/54822861.err
Error in line 4: NTgXZ S395 72,2
Error in line 9: 94jW2GSDsh S395 75,4
Error in line 15: 30EK S824 37,6
Error in line 34: xWb8J0ylfL S824 7,1
Error in line 27: qDS2c0pj S395 98,2
